--- a/api/pom.xml
+++ b/api/pom.xml
@@ -357,6 +357,17 @@
 					<encoding>UTF8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.21.v20170120</version>
+				<configuration>
+					<stopPort>8081</stopPort>
+					<httpConnector>
+						<port>8080</port>
+					</httpConnector>
+				</configuration>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
